--- a/package.json
+++ b/package.json
@@ -11,11 +11,26 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "ant-design-vue": "^4.1.2",
+    "axios": "^0.21.4",
+    "bootstrap": "^4.6.0",
+    "highcharts-vue": "^1.4.3",
+    "moment": "^2.30.1",
+    "sass": "^1.32.13",
+    "timeago.js": "^4.0.2",
+    "v-viewer": "^3.0.13",
     "vue": "^3.4.15",
+    "vue-axios": "^3.2.4",
     "vue-router": "^4.2.5",
-    "vuetify": "^3.5.6"
+    "vue-select": "^4.0.0-beta.6",
+    "vue-socket.io": "^3.0.10",
+    "vue-tel-input": "^4.4.2",
+    "vue-web-storage": "^6.1.0",
+    "vuetify": "^3.5.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@mdi/font": "^7.0.96",
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/eslint-config-prettier": "^8.0.0",
