--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "vue3-carousel": "^0.3.1",
     "vue3-emoji-picker": "^1.1.8",
     "vuetify": "^3.6.13",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@mdi/font": "^7.0.96",
