--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@popperjs/core": "^2.11.8",
+    "@types/vuelidate": "^0.7.21",
     "@vuepic/vue-datepicker": "^8.5.1",
     "ant-design-vue": "^4.1.2",
     "axios": "^0.21.4",
+    "babel-preset-typescript-vue": "^1.1.1",
     "bootstrap": "^4.6.0",
     "highcharts-vue": "^1.4.3",
     "moment": "^2.30.1",
@@ -25,7 +27,7 @@
     "timeago.js": "^4.0.2",
     "v-datatable-light": "^0.8.2",
     "v-viewer": "^3.0.13",
-    "vue": "^3.4.15",
+    "vue": "^3.5.9",
     "vue-apexcharts": "^1.6.2",
     "vue-dropdown-datepicker": "^1.3.1",
     "vue-fixed-header": "^3.2.15",
@@ -34,8 +36,10 @@
     "vue-select": "^4.0.0-beta.6",
     "vue-socket.io": "^3.0.10",
     "vue-tel-input": "^9.1.0",
+    "vue-template-compiler": "^2.7.16",
     "vue3-carousel": "^0.3.1",
     "vue3-emoji-picker": "^1.1.8",
+    "vuelidate": "^0.7.7",
     "vuetify": "^3.6.13",
     "vuex": "^4.1.0",
     "ws": "^8.18.0"
@@ -43,11 +47,11 @@
   "devDependencies": {
     "@mdi/font": "^7.0.96",
     "@rushstack/eslint-patch": "^1.3.3",
-    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "prettier": "^3.0.3",
-    "vite": "^5.0.11"
+    "vite": "^5.4.8"
   }
 }
