--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_STRIPE_PUBLIC_KEY=pk_test_51IsaaMBGUmvLHtCrCZvd5unlKMW6StKdBGOZQi5
-VITE_IMAGE=http://127.0.0.1:8000/api
+VITE_IMAGE=https://biya.nikahhelp.com/api
 VITE_CHAT_SERVER=wss://3bqn5oy4pf.execute-api.eu-north-1.amazonaws.com/production/
 VITE_CHAT_PORT=8080
