--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
     "@ant-design/icons-vue": "^7.0.1",
     "@popperjs/core": "^2.11.8",
     "@vuepic/vue-datepicker": "^8.5.1",
-    "ant-design-vue": "^4.1.2",
+    "ant-design-vue": "^4.2.3",
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
     "highcharts-vue": "^1.4.3",
+    "mitt": "^3.0.1",
     "moment": "^2.30.1",
     "sass": "^1.32.13",
-    "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5",
     "timeago.js": "^4.0.2",
     "v-datatable-light": "^0.8.2",
     "v-viewer": "^3.0.13",
@@ -32,7 +31,6 @@
     "vue-multiselect": "^3.0.0-beta.3",
     "vue-router": "^4.2.5",
     "vue-select": "^4.0.0-beta.6",
-    "vue-socket.io": "^3.0.10",
     "vue-tel-input": "^9.1.0",
     "vue3-carousel": "^0.3.1",
     "vue3-emoji-picker": "^1.1.8",
