--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-prettier": "^8.0.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "prettier": "^3.0.3",
