--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "prettier": "^3.0.3",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "vite-plugin-remove-console": "^2.2.0"
   }
 }
