--- a/package.json
+++ b/package.json
@@ -42,15 +42,16 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
     "@mdi/font": "^7.0.96",
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-vue": "^9.31.0",
+    "globals": "^15.12.0",
     "prettier": "^3.0.3",
-    "vite": "^5.4.8",
-    "vite-plugin-remove-console": "^2.2.0"
+    "vite": "^5.4.8"
   }
 }
