--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
-// with options
+// without options
 {
-    "plugins": [ ["transform-remove-console", { "exclude": [ "error", "warn"] }] ]
+    "plugins": ["transform-remove-console"]
   }
