--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ant-design-vue": "^4.2.3",
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
+    "emoji-mart-vue-fast": "^15.0.3",
     "highcharts-vue": "^1.4.3",
     "mitt": "^3.0.1",
     "moment": "^2.30.1",
@@ -33,7 +34,6 @@
     "vue-select": "^4.0.0-beta.6",
     "vue-tel-input": "^9.1.0",
     "vue3-carousel": "^0.3.1",
-    "vue3-emoji-picker": "^1.1.8",
     "vuetify": "^3.6.13",
     "vuex": "^4.1.0"
   },
